Add configurable inputs for WIFI settings in workflow

--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -20,6 +20,21 @@ on:
         default: 'false'
         required: false
         type: boolean
+      WRT_SSID:
+        description: 'WIFI名称'
+        default: 'OWRT'
+        required: false
+        type: string
+      WRT_WORD:
+        description: 'WIFI密码'
+        default: '12345678'
+        required: false
+        type: string
+      WRT_IP:
+        description: '默认地址'
+        default: '192.168.10.1'
+        required: false
+        type: string
 
 #CI权限
 permissions: write-all
@@ -46,11 +61,11 @@ jobs:
       #默认主机名
       WRT_NAME: OWRT
       #默认WIFI名称
-      WRT_SSID: OWRT
+      WRT_SSID: ${{ inputs.WRT_SSID }}
       #默认WIFI密码
-      WRT_WORD: 12345678
+      WRT_WORD: ${{ inputs.WRT_WORD }}
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: ${{ inputs.WRT_IP }}
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
